# tinycompiled

./: .gitignore  LICENSE  README.md  cli.py  gui.py  main.py  pyproject.toml  test_parser.py
docs/: DEFINITION.md  DEFINITION_NEW.md  DOCUMENTATION.md  INSTRUCTIONS.md  TinyCompiled.pptx  USAGE.md
examples/: .gitignore  bitwise_demo.tc  calculator.tc  countdown.tc  fibonacci.asm  fibonacci.tc  for_loop_demo.tc  hello_world.asm  max_value.tc  multiplication_table.tc  out.asm  power.tc  prime_check.tc  sum.tc  syntax_test.tc  to_run.md
src/: __init__.py  main.css  main.tcss
src/ast/: __init__.py  node.py
src/compiler/: __init__.py  compiler.py
src/generator/: __init__.py  nasm_generator.py
src/highlighter/: package-lock.json
src/highlighter/tree-sitter-tinycompiled/: grammar.js  highlights.scm  package.json  pyproject.toml  setup.py  tree-sitter.json
src/highlighter/tree-sitter-tinycompiled/bindings/python/tests/: test_binding.py
src/highlighter/tree-sitter-tinycompiled/bindings/python/tree_sitter_tinycompiled/: __init__.py  binding.c
src/highlighter/tree-sitter-tinycompiled/src/: grammar.json  node-types.json  parser.c
src/lexer/: __init__.py  keyword.py  lexer.py  token.py
src/parser/: __init__.py  parser.py
