[project]
name = "tinycompiled"
version = "0.1.0"
description = "TinyCompiled is a small educational compiler for a custom assembly-like language, designed to help new developers understand the fundamentals of assembly language and how compilers translate high-level instructions into low-level machine operations."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.0",
    "textual[syntax]>=6.4.0",
]
